src/styles.scss
/* ... */
.mat-menu-panel,
.mat-select-panel {
  border-radius: 0 !important;
}

@media (min-width: 768px) {

  section {
    padding-top: 6rem;
    padding-bottom: 6rem;
  }

  pay-choice-dialog .choice-group h1 {
    font-size: 3rem;
    margin: 0;
  }

}

@media (min-width: 1600px) {

  .side-nav {
    position: absolute !important;
  }

}

